# agentic-mudahurus

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
api/: Dockerfile  README.md  go.mod  go.sum
api/cmd/migratecheck/: main.go
api/cmd/seed/: main.go
api/cmd/server/: main.go
api/internal/accesslog/: accesslog.go
api/internal/assistant/: assistant.go
api/internal/auth/: argon2.go  argon2_test.go  handler.go  (+5 more)
api/migrations/: migrations
docs/: ARCHITECTURE.md  ENHANCEMENTS.md  IMPLEMENTATION.md  PARITY_CHECKLIST.md  PRD.md  RUNBOOK.md  SECURITY_REVIEW.md  SPRINT_PLAN.md
infra/: docker-compose.yml
infra/loadtest/: storefront.js
infra/prometheus/: prometheus.yml
migration/: README.md  mapping.md  pyproject.toml
migration/mudahurus_migrate/: __init__.py  __main__.py  reconcile.py  transforms.py
migration/tests/: test_transforms.py
rag/: Dockerfile  README.md  pyproject.toml
rag/airflow/dags/: mudahurus_ingest.py
rag/mudahurus_rag/: __init__.py  chunking.py  config.py  embeddings.py  engine.py  vectorstore.py
rag/mudahurus_rag/api/: main.py
rag/mudahurus_rag/assistant/: __init__.py  llm.py  service.py
rag/mudahurus_rag/enhancements/: __init__.py  orchestration.py
rag/mudahurus_rag/ingestion/: __init__.py  extract.py  ocr.py  pipeline.py
rag/mudahurus_rag/retrieval/: __init__.py  service.py
rag/tests/: test_enhancements.py  test_pipeline.py
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.vue  api.js  i18n.js  main.js  router.js  style.css
(+64 files in other folders)
