[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mudahurus-rag"
version = "1.0.0"
description = "MUDAHURUS 2.0 RAG plane — ingestion, retrieval and read-only assistant"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

# Optional heavy backends. The package runs with pure-Python dev fallbacks
# (hashing embedder, in-memory vector store, no-op OCR) when these are absent,
# so it is testable offline; production installs the extras.
[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.6"]
vector = ["qdrant-client>=1.9"]
ocr = ["pytesseract>=0.3.10", "pdf2image>=1.17", "Pillow>=10"]
db = ["psycopg[binary]>=3.1"]
airflow = ["apache-airflow>=2.9"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["mudahurus_rag*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
